--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,30 @@ services:
       - POSTGRES_PASSWORD=${DB_PASSWORD}
       - POSTGRES_USER=${DB_USERNAME}
       - POSTGRES_DB=${DB_NAME}
+    # Clúster de Usuarios
+  zookeeper-events-admin:
+    image: confluentinc/cp-zookeeper:7.0.1
+    container_name: zookeeper-events-admin
+    ports:
+      - '2181:2181'
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+
+  kafka-events-admin:
+    image: confluentinc/cp-kafka:7.0.1
+    container_name: kafka-events-admin
+    depends_on:
+      - zookeeper-events-admin
+    ports:
+      - '9092:9092'
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper-events-admin:2181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_DEFAULT_REPLICATION_FACTOR: 1
+      KAFKA_NUM_PARTITIONS: 2
+      KAFKA_LOG_RETENTION_HOURS: 2
+    volumes:
+      - ./kafka-events-admin-data/config:/etc/kafka
